# zoom_v-sdk_linux_bot

./: .gitignore  CMakeLists.txt  README.md  build_install.sh  claw_machine_client.service  config.json
include/zoom_video_sdk/: zoom_sdk_raw_data_def.h  zoom_video_sdk_api.h  zoom_video_sdk_chat_message_interface.h  zoom_video_sdk_cloud_record_handler_interface.h  zoom_video_sdk_def.h  zoom_video_sdk_delegate_interface.h  zoom_video_sdk_interface.h  zoom_video_sdk_password_handler_interface.h  zoom_video_sdk_platform.h  zoom_video_sdk_session_info_interface.h  zoom_video_sdk_vector_interface.h
include/zoom_video_sdk/helpers/: zoom_video_sdk_annotation_helper_interface.h  zoom_video_sdk_audio_helper_interface.h  zoom_video_sdk_audio_send_rawdata_interface.h  zoom_video_sdk_audio_setting_interface.h  zoom_video_sdk_chat_helper_interface.h  zoom_video_sdk_cmd_channel_interface.h  zoom_video_sdk_crc_helper_interface.h  zoom_video_sdk_livestream_helper_interface.h  zoom_video_sdk_livetranscription_helper_interface.h  zoom_video_sdk_network_connection_helper_interface.h  zoom_video_sdk_phone_helper_interface.h  zoom_video_sdk_recording_helper_interface.h  zoom_video_sdk_share_helper_interface.h  zoom_video_sdk_share_setting_interface.h  zoom_video_sdk_user_helper_interface.h  zoom_video_sdk_video_helper_interface.h  zoom_video_sdk_video_setting_interface.h  zoom_video_sdk_video_source_helper_interface.h
src/: raw_data_ffmpeg_encoder.cpp  raw_data_ffmpeg_encoder.h  video_sdk_session_recorder.cpp  zoom_v-sdk_linux_bot.cpp
